<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">WatchMouse</string>
    <string name="please_wait">Please wait…</string>
    <string name="generic_disabled">OFF</string>
    <string name="pref_bluetooth">Paired devices</string>
    <string name="pref_bluetoothAvailable">Available devices</string>
    <string name="pref_bluetoothScan">Scan for nearby devices</string>
    <string name="pref_bluetoothScan_scanning">Scanning for nearby devices…</string>
    <string name="pref_bluetoothScan_none">No devices found. Keep the target discoverable and scan again.</string>
    <string name="pref_bluetoothScan_error">Unable to start scan</string>
    <string name="pref_bluetoothScan_permission">Bluetooth permission required</string>
    <string name="pref_bluetooth_connect">Connect</string>
    <string name="pref_bluetooth_disconnect">Disconnect</string>
    <string name="pref_bluetooth_unpair">Unpair</string>
    <string name="pref_bluetooth_select">Select</string>
    <string name="pref_bluetooth_turningOn">Bluetooth turning on…</string>
    <string name="pref_bluetooth_turningOff">Bluetooth turning off…</string>
    <string name="pref_bluetooth_available">Available</string>
    <string name="pref_bluetooth_unavailable">Unavailable</string>
    <string name="pref_bluetooth_pairing">Pairing…</string>
    <string name="pref_bluetooth_connecting">Connecting…</string>
    <string name="pref_bluetooth_connected">Connected</string>
    <string name="pref_bluetooth_disconnecting">Disconnecting…</string>
    <string name="pref_bluetooth_disconnected">Disconnected</string>
    <string name="pref_bluetooth_forget">Forget</string>
    <string name="pref_appAbout">About</string>
    <string name="pref_networkTitle">Network target</string>
    <string name="pref_networkTransport">Network transport (TCP)</string>
    <string name="pref_networkTransport_summary">Control a PC or another Android device over Wi-Fi instead of Bluetooth</string>
    <string name="pref_netHost">Receiver address</string>
    <string name="pref_netHost_summary">IP address or hostname of the receiver</string>
    <string name="pref_netPort">Port</string>
    <string name="pref_netPort_summary">TCP port listened to by the receiver (default 8888)</string>
    <string name="pref_netPin">PIN</string>
    <string name="pref_netPin_summary">PIN configured on the receiver (--pin), used to encrypt the link</string>
    <string name="pref_netStatus">Connection</string>
    <string name="pref_net_connected">Connected to %1$s</string>
    <string name="pref_net_disconnected">Not connected</string>
    <string name="pref_netOpen">Select input mode</string>
    <string name="pref_netOpen_summary">Pick mouse, touchpad, keypad or keyboard</string>
    <string name="pref_about_openSource">Open source license</string>
    <string name="pref_about_checkUpdates">Check for updates</string>
    <string name="pref_about_checkingUpdates">Checking for updates…</string>
    <string name="pref_about_changelog">Changelog</string>
    <string name="update_available">Update v%1$s available</string>
    <string name="update_upToDate">WatchMouse is up to date</string>
    <string name="update_downloadAndInstall">Download &amp; install</string>
    <string name="update_downloading">Downloading update…</string>
    <string name="update_downloadProgress">Downloading… %1$d%%</string>
    <string name="update_checkFailed">Update check failed: %1$s</string>
    <string name="update_installFailed">Update failed</string>
    <string name="update_installPermission">Allow installing apps for WatchMouse, then tap Download &amp; install again.</string>
    <string name="update_installedSuccess">Update installed</string>
    <string name="pref_about_sendReport">Send bug report</string>
    <string name="report_preparing">Preparing report…</string>
    <string name="report_sent">Report sent (#%1$d)</string>
    <string name="report_open">Open report</string>
    <string name="report_failed">Report failed: %1$s</string>
    <string name="pref_mode_select">Input Mode</string>
    <string name="pref_inputMouse">Mouse</string>
    <string name="left_button_label">L</string>
    <string name="right_button_label">R</string>
    <string name="click_and_hold">Left click and hold</string>
    <string name="right_click_hold">Right click and hold</string>
    <string name="middle_click">Middle click</string>
    <string name="tap_to_click">Wave your hand to move pointer\nTap button to click\nPull from the top to switch hand</string>
    <string name="mouse_hand_left">Left Hand\n(Watch is on the left wrist)</string>
    <string name="mouse_hand_center">Center\n(Watch is in your hand)</string>
    <string name="mouse_hand_right">Right Hand\n(Watch is on the right wrist)</string>
    <string name="pref_inputTouchpad">Touchpad</string>
    <string name="pref_inputCursor">Cursor keys</string>
    <string name="keypad_hint">Double tap: Enter key\nLong press: Exit keypad mode\nSwipe from center for extra keys</string>
    <string name="key_name_escape">Escape</string>
    <string name="key_name_backspace">Backspace</string>
    <string name="key_name_tab">Tab</string>
    <string name="key_name_space">Space</string>
    <string name="pref_inputKeyboard">Keyboard input</string>
    <string name="pref_inputSettings">Settings</string>
    <string name="pref_settingCalibration">Calibrate sensors</string>
    <string name="pref_settingCalibration_summary">Use this option if the mouse pointer is drifting</string>
    <string name="setting_recalibrate">Recalibrate sensors</string>
    <string name="setting_calibration_running">Calibrating\u2026</string>
    <string name="pref_settingStabilize">Stabilize pointer movements</string>
    <string name="pref_settingStabilize_summary">Makes it easier to point at small targets</string>
    <string name="pref_settingCursor8Way">8-directional cursor</string>
    <string name="pref_settingCursor8Way_summary">Allow diagonal movements in the keypad mode</string>
    <string name="pref_settingReducedRate">Reduce data rate to 50 Hz</string>
    <string name="pref_settingReducedRate_summary">Enable this if the mouse pointer can\'t keep up with motion</string>
    <string name="pref_settingStayConnected">Stay connected in the background</string>
    <string name="pref_settingStayConnected_summary">Keep device connection active while the app is minimized</string>
    <string name="pref_settingReplayTutorials">Repeat all tutorials</string>
    <string name="pref_settingReplayTutorials_summary">Show help screens for every mode once again when you enter them</string>
    <string name="onboarding_message_welcome">Use your Wear OS smartwatch as a Bluetooth mouse or keyboard; start by pairing to another device.</string>
    <string name="onboarding_message_mouse">Move your Wear OS device to move the mouse pointer on the screen.</string>
    <string name="onboarding_message_keypad">Tap on the sides of the Wear OS device\'s screen to press arrow keys.</string>
    <string name="onboarding_message_calibration">Place your Wear OS device on a solid, level surface and make sure it is completely still.</string>
</resources>